--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOwnMVVMSimpler">
-        <activity android:name=".presentation.MovieActivity"></activity>
+        <activity android:name=".presentation.MoviesActivity"></activity>
+        <activity android:name=".presentation.MovieActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
