--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.y4kuzabanzai.myownmvvmsimpler">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".presentation.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyOwnMVVMSimpler">
         <activity android:name=".presentation.MoviesActivity"></activity>
+
         <activity android:name=".presentation.MovieActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
